--- a/css/cover.css
+++ b/css/cover.css
@@ -19,6 +19,10 @@ a:hover {
   border: 1px solid #fff;
 }
 
+.nav-icon-scroll > i {
+  animation: pulse 1s ease-in-out infinite;
+  font-size: 3rem;
+}
 
 /*
  * Base structure
@@ -37,20 +41,20 @@ body {
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 .site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
 }
 .cover-container {
   margin-right: auto;
   margin-left: auto;
+  width: 100%;
 }
 
 /* Padding for spacing */
@@ -65,6 +69,7 @@ body {
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
+  color: #fff;
 }
 
 .masthead-nav > li {
@@ -116,6 +121,9 @@ body {
   padding: 10px 20px;
   font-weight: bold;
 }
+.cover-heading {
+  color: #fff;
+}
 
 
 /*
@@ -128,6 +136,70 @@ body {
 }
 
 
+#about-wrapper {
+  background-color: #fff;
+  color: #333;
+  text-shadow: 0 1px 3px rgba(200,200,200,.5);
+}
+
+#about-wrapper a,
+#about-wrapper a:focus,
+#about-wrapper a:hover {
+  color: #333;
+}
+
+#about-wrapper .btn-default,
+#about-wrapper .btn-default:hover,
+#about-wrapper .btn-default:focus {
+  color: #fff;
+  text-shadow: none; /* Prevent inheritance from `body` */
+  background-color: #333;
+  border: 1px solid #333;
+}
+
+#about-wrapper .masthead-nav > li > a:hover,
+#about-wrapper .masthead-nav > li > a:focus {
+  background-color: transparent;
+  border-bottom-color: #a9a9a9;
+  border-bottom-color: rgba(0,0,0,.25);
+}
+#about-wrapper .masthead-nav > .active > a,
+#about-wrapper .masthead-nav > .active > a:hover,
+#about-wrapper .masthead-nav > .active > a:focus {
+  color: #333;
+  border-bottom-color: #333;
+}
+
+#about-wrapper .masthead-brand {
+  color: #333;
+}
+#about-wrapper .cover-heading {
+  color: #333;
+}
+
+#map {
+  margin-bottom: 18px;
+  height: 150px;
+  width: 100%;
+}
+
+textarea:focus,
+textarea.form-control:focus,
+input.form-control:focus,
+input[type=text]:focus,
+input[type=password]:focus,
+input[type=email]:focus,
+input[type=number]:focus,
+[type=text].form-control:focus,
+[type=password].form-control:focus,
+[type=email].form-control:focus,
+[type=tel].form-control:focus,
+[contenteditable].form-control:focus {
+    -webkit-box-shadow: inset 0 -2px 0 #fff;
+	-moz-box-shadow: inset 0 -2px 0 #fff;
+    box-shadow: inset 0 -2px 0 #fff;
+}
+
 /*
  * Affix and center
  */
@@ -135,22 +207,27 @@ body {
 @media (min-width: 768px) {
   /* Pull out the header and footer */
   .masthead {
-    position: fixed;
+    position: absolute;
     top: 0;
   }
   .mastfoot {
-    position: fixed;
+    position: absolute;
     bottom: 0;
   }
   /* Start the vertical centering */
   .site-wrapper-inner {
-    vertical-align: middle;
+    align-items: center;
   }
   /* Handle the widths */
   .masthead,
   .mastfoot,
   .cover-container {
     width: 100%; /* Must be percentage or pixels for horizontal alignment */
+  }
+  
+  #map {
+	height: 200px;
+	margin-bottom: 0;
   }
 }
 
