--- a/css/cover.css
+++ b/css/cover.css
@@ -198,6 +198,7 @@ input[type=number]:focus,
     -webkit-box-shadow: inset 0 -2px 0 #fff;
 	-moz-box-shadow: inset 0 -2px 0 #fff;
     box-shadow: inset 0 -2px 0 #fff;
+	border-color: transparent;
 }
 
 /*
