--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a:hover {
 }
 
 .nav-icon-scroll > i {
-  animation: pulse 1s ease-in-out infinite;
+  animation: flash 3s ease-in-out infinite;
   font-size: 3rem;
 }
 
@@ -91,7 +91,7 @@ body {
 .masthead-nav > li > a:focus {
   background-color: transparent;
   border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
+  border-bottom-color: rgba(255, 255, 255, .25);
 }
 .masthead-nav > .active > a,
 .masthead-nav > .active > a:hover,
@@ -132,7 +132,7 @@ body {
 
 .mastfoot {
   color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
+  color: rgba(255, 255, 255, .5);
 }
 
 
@@ -161,7 +161,7 @@ body {
 #about-wrapper .masthead-nav > li > a:focus {
   background-color: transparent;
   border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(0,0,0,.25);
+  border-bottom-color: rgba(0, 0, 0, .25);
 }
 #about-wrapper .masthead-nav > .active > a,
 #about-wrapper .masthead-nav > .active > a:hover,
