--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,8 @@ a:hover {
 
 html,
 body {
-  height: 100%;
+  height: auto;
+  min-height: 100%;
   background-color: #333;
   overflow-x: hidden;
 }
