--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,10 @@
   width: 200px;
   height: 200px;
   display: block;
-  margin: 0 auto;
+  margin: -100px 0 0 -100px;
   position: relative;
-  top: 75px;
+  top: 50%;
+  left: 50%;
 }
 
 .loader > .spinner {
