--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   height: 200px;
   display: block;
   margin: -100px 0 0 -100px;
-  position: relative;
+  position: fixed;
   top: 50%;
   left: 50%;
 }
